--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -53,89 +53,143 @@
 
       
 
-<!--ENTREES--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">ENTRÉES</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Tartare de poulpe acidulé</strong><br><span> Aux zests d'orange</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>25€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
+<!--ENTREES-->
+<div class="entrees">
+  <h2 class="title-border-bottom">ENTRÉES</h2>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Velouté de légumes d'antan</strong><br><span> Carotte, panais, topinambour</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Tartare de poulpe acidulé</h3>
+      <p class="small-title-menu">Aux zests d'orange</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>25€</strong></p>
+    </div>
+    <div class="check">
       <i class="fa-check fas logo_check"></i>
-      </div>
     </div>
+  </article>
 
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Oeuf au plat </strong><br><span>Revisitée</span></p>
-      <div class="price-check" >
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Velouté de légumes d'antan</h3>
+      <p class="small-title-menu">Carotte, panais, topinambour</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>35€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+  </article>
+
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Soupe à l'oignon</h3>
+      <p class="small-title-menu">Revisitée</p>
+    </div>
+    <div class="tarif">
       <p class="price"><strong>20€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+
+</div>
+</article>
+
+<!--PLATS-->
+<div class="plats">
+  <h2 class="title-border-bottom">PLATS</h2>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Coquilles Saint-Jacques</h3>
+      <p class="small-title-menu">Accompagnées d'une purée de panais</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>40€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
   </article>
 
-<!--PLATS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">PLATS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong>Coquilles Saint-Jacques </strong><br><span> Accompagnées d'une purée de panais</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>40€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Magret de cannard </strong><br><span>Et parmentier de pommes de terres</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Magret de cannard</h3>
+      <p class="small-title-menu">Et parmentier de pommes de terres</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>35€</strong></p>
+    </div>
+    <div class="check">
       <i class="fa-check fas logo_check"></i>
-      </div>
     </div>
+  </article>
 
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Pigeonneau d'Ille-et-Villaine </strong><br><span> Sur son lit de gnocchis aux légumes</span></p>
-      <div class="price-check" >
+
+  <artile class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Pigeonneau d'Ille-et-Villaine</h3>
+      <p class="small-title-menu">Sur son lit de gnocchis aux légumes</p>
+    </div>
+    <div class="tarif">
       <p class="price"><strong>44€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
-  </article>
-
-  <!--DESSERTS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">DESSERTS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Pétales de violettes glacés </strong><br><span> Et purée de noisettes</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>18€</strong></p>
-    <i class="fa-check fas logo_check"></i>
     </div>
-  </div>
-
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Fondant au chocolat</strong><br><span>Revisité</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>22€</strong></p>
+    <div class="check">
       <i class="fa-check fas logo_check"></i>
-      </div>
     </div>
+    </article>
+</div>
 
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Millefeuille croustillant </strong><br><span> Myrtilles et pâte d'amande</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>23€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
+
+<!--DESSERTS-->
+<div class="desserts">
+  <h2 class="title-border-bottom">DESSERTS</h2>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Pétales de violettes glacés</h3>
+      <p class="small-title-menu">Et purée de noisettes</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>18€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
   </article>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Fondant au chocolat </h3>
+      <p class="small-title-menu">Revisité</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>22€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+  </article>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Millefeuille croustillant</h3>
+      <p class="small-title-menu">Myrtilles et pâte d'amande</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>23€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+  </article>
+</div>
+</div>
 
   <nav class="explore-restaurant" id="margin-commander">Commander</nav>
   
