--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -52,92 +52,145 @@
       </div>
 
       
+      <!--ENTREES-->
+      <div class="entrees">
+        <h2 class="title-border-bottom">ENTRÉES</h2>
 
-<!--ENTREES--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">ENTRÉES</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>25€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Fricassée d'escargot</h3>
+    <p class="small-title-menu">Au piment d'espelette</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>25€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Foie gras de canard mi-cuit</strong><br><span> Et ses copeaux de truffe noire</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
-      <i class="fa-check fas logo_check"></i>
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Foie gras de canard mi-cuit</h3>
+            <p class="small-title-menu">Et ses copeaux de truffe noire</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>35€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Oeuf au plat</h3>
+            <p class="small-title-menu">Assaisoné à la truffe sur lit de...</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>20€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+
       </div>
-    </div>
+      </article>
 
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Oeuf au plat </strong><br><span>Assaisoné à la truffe sur lit de...</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>20€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
+      <!--PLATS-->
+      <div class="plats">
+        <h2 class="title-border-bottom">PLATS</h2>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Filet de boeuf aux herbes</h3>
+            <p class="small-title-menu">Accompagné de sa ribambelle de légu...</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>40€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Parmentier de queue de boeuf</h3>
+            <p class="small-title-menu">A la truffe noire sur sa purée de panais</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>35€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+
+        <artile class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Filet de Turbot</h3>
+            <p class="small-title-menu">Aux agrumes</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>44€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+          </article>
       </div>
-  </article>
 
-<!--PLATS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">PLATS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Filet de boeuf aux herbes </strong><br><span> Accompagné de sa ribambelle de légu...</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>40€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Parmentier de queue de boeuf </strong><br><span>A la truffe noire sur sa purée de panais</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
-      <i class="fa-check fas logo_check"></i>
+      <!--DESSERTS-->
+      <div class="desserts">
+        <h2 class="title-border-bottom">DESSERTS</h2>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Paris-brest</h3>
+            <p class="small-title-menu">Revisité</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>18€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Macaron au chocolat d'exception</h3>
+            <p class="small-title-menu">Et glace à la vanille de madagascar</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>22€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Mousse au chocolat</h3>
+            <p class="small-title-menu">Au piment d'espelette et à la truffe noire</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>23€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
       </div>
-    </div>
-
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Filet de Turbot </strong><br><span> Aux agrumes</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>44€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
       </div>
-  </article>
 
-  <!--DESSERTS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">DESSERTS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Paris-brest </strong><br><span> Revisité</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>18€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
-
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Macaron au chocolat d'exception </strong><br><span>Et glace à la vanille de madagascar</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>22€</strong></p>
-      <i class="fa-check fas logo_check"></i>
-      </div>
-    </div>
-
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Mousse au chocolat </strong><br><span> Au piment d'espelette et à la truffe noire</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>23€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
-  </article>
-
-  <nav class="explore-restaurant" id="margin-commander">Commander</nav>
+    <nav class="explore-restaurant" id="margin-commander">Commander</nav>
   
 
     </section>
