--- a/restaurants/Le-délice-des-sens.html
+++ b/restaurants/Le-délice-des-sens.html
@@ -49,96 +49,146 @@
         </div>
       </div>
 
-<!--ENTREES--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">ENTRÉES</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Tartare de thon</strong><br><span> Assaisonné au yuzu</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>25€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
+      <!--ENTREES-->
+      <div class="entrees">
+        <h2 class="title-border-bottom">ENTRÉES</h2>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Bouchée de homard croustillant</strong><br><span> Et sa farandole de petits légumes</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
-      <i class="fa-check fas logo_check"></i>
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Tartare de thon</h3>
+            <p class="small-title-menu">Assaisonné au yuzu</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>25€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Bouchée de homard croustillant</h3>
+            <p class="small-title-menu">Et sa farandole de petits légumes</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>35€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Velouté de cèpes</h3>
+            <p class="small-title-menu">Aux truffes</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>20€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+
       </div>
-    </div>
+      </article>
 
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Velouté de cèpes </strong><br><span>Aux truffes</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>40€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
+      <!--PLATS-->
+      <div class="plats">
+        <h2 class="title-border-bottom">PLATS</h2>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Poulet rôti aux herbes de provence</h3>
+            <p class="small-title-menu">Et sa créme de truffe</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>40€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Langouste rôtie</h3>
+            <p class="small-title-menu">Et ses légumes de saison</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>35€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+
+        <artile class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Côte de boeuf angus</h3>
+            <p class="small-title-menu">Et sa purée de panais</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>44€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+          </article>
       </div>
-  </article>
-
-  
 
 
-<!--PLATS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">PLATS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Poulet rôti aux herbes de provence </strong><br><span> Et sa créme de truffe</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>40€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
+      <!--DESSERTS-->
+      <div class="desserts">
+        <h2 class="title-border-bottom">DESSERTS</h2>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Langouste rôtie </strong><br><span>Et ses légumes de saison</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
-      <i class="fa-check fas logo_check"></i>
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Farandole de desserts</h3>
+            <p class="small-title-menu">Du chef</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>18€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Crème brulée </h3>
+            <p class="small-title-menu">Revisitée</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>22€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
+
+        <article class="choice-menu">
+          <div class="name-menu">
+            <h3 class="title-menu">Tiramisu</h3>
+            <p class="small-title-menu">À la noisette</p>
+          </div>
+          <div class="tarif">
+            <p class="price"><strong>23€</strong></p>
+          </div>
+          <div class="check">
+            <i class="fa-check fas logo_check"></i>
+          </div>
+        </article>
       </div>
-    </div>
-
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Côte de boeuf angus </strong><br><span> Et sa purée de panais</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>44€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
       </div>
-  </article>
 
-  <!--DESSERTS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">DESSERTS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Farandole de desserts </strong><br><span> Du chef</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>76€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong>Crème brulée </strong><br><span>Revisitée</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>22€</strong></p>
-      <i class="fa-check fas logo_check"></i>
-      </div>
-    </div>
-
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong>Tiramisu </strong><br><span>À la noisette</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>23€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
-  </article>
-
-  <nav class="explore-restaurant" id="margin-commander">Commander</nav>
-  
-
+      <nav class="explore-restaurant" id="margin-commander">Commander</nav>
     </section>
   </main>
 
@@ -158,5 +208,4 @@
   </footer>
   <!--Fin footer-->
 </body>
-
 </html>
