--- a/restaurants/La-note-enchantée.html
+++ b/restaurants/La-note-enchantée.html
@@ -49,99 +49,157 @@
         </div>
       </div>
 
-<!--ENTREES--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">ENTRÉES</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Ravioles de foie gras </strong><br><span> Accompagnés de leur créme à la truffe</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>25€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
+ <!--ENTREES-->
+ <div class="entrees">
+  <h2 class="title-border-bottom">ENTRÉES</h2>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Caviar osciètre</strong><br><span> Sur blini à la farine de blé noir</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Ravioles de foie gras</h3>
+      <p class="small-title-menu">Accompagnés de leur créme à la truffe</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>25€</strong></p>
+    </div>
+    <div class="check">
       <i class="fa-check fas logo_check"></i>
-      </div>
     </div>
-
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Homard et espuma de... </strong><br><span>Mariné aux zests d'orange</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>20€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
   </article>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Foie gras de canard cuit entier </strong><br><span>Confiture de figue et pain toasté</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
-      <i class="fa-check fas logo_check"></i>
-      </div>
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Caviar osciètre</h3>
+      <p class="small-title-menu">Sur blini à la farine de blé noir</p>
     </div>
+    <div class="tarif">
+      <p class="price"><strong>35€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+  </article>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Homard et espuma de...</h3>
+      <p class="small-title-menu">Mariné aux zests d'orange</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>20€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+  </article>
+
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Foie gras de canard cuit entier</h3>
+      <p class="small-title-menu">Confiture de figue et pain toasté</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>35€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+
+</div>
 </article>
 
+<!--PLATS-->
+<div class="plats">
+  <h2 class="title-border-bottom">PLATS</h2>
 
-<!--PLATS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">PLATS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Noix de coquilles Saint-Jacques </strong><br><span> Sur lit de purée de céleri-rave</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>40€</strong></p>
-    <i class="fa-check fas logo_check"></i>
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Noix de coquilles Saint-Jacques</h3>
+      <p class="small-title-menu">Sur lit de purée de céleri-rave</p>
     </div>
-  </div>
-
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Langoustine poêlée </strong><br><span>Purée de patate douce</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>35€</strong></p>
+    <div class="tarif">
+      <p class="price"><strong>40€</strong></p>
+    </div>
+    <div class="check">
       <i class="fa-check fas logo_check"></i>
-      </div>
     </div>
-
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Mijoté de queue de boeuf </strong><br><span> Et riz sauvage aux zests de citron</span></p>
-      <div class="price-check" >
-      <p class="price"><strong>45€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
   </article>
 
-  <!--DESSERTS--> 
-<article class="choice-menus">
-  <h3 class="title-border-bottom">DESSERTS</h3>
-  <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Paris-brest </strong><br><span> Revisité</span></p>
-  <div class="price-check" >
-  <p class="price"><strong>18€</strong></p>
-    <i class="fa-check fas logo_check"></i>
-    </div>
-  </div>
 
-  <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong>Macaron noisettes et chocolat </strong><br><span>Glace au caramel brun et sel de guérande</span></p>
-    <div class="price-check" >
-    <p class="price"><strong>22€</strong></p>
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Langoustine poêlée</h3>
+      <p class="small-title-menu">Purée de patate douce</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>35€</strong></p>
+    </div>
+    <div class="check">
       <i class="fa-check fas logo_check"></i>
-      </div>
     </div>
+  </article>
 
-    <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong>Tarte au citron meringuée </strong><br><span> Destructurée</span></p>
-      <div class="price-check" >
+
+  <artile class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Mijoté de queue de boeuf</h3>
+      <p class="small-title-menu">Et riz sauvage aux zests de citron</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>44€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+    </article>
+</div>
+
+
+<!--DESSERTS-->
+<div class="desserts">
+  <h2 class="title-border-bottom">DESSERTS</h2>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Macaron noisettes et chocolat</h3>
+      <p class="small-title-menu">Glace au caramel brun et sel de guérande</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>18€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+  </article>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Baba au rhum revisité </h3>
+      <p class="small-title-menu">Avec son coulis de citron</p>
+    </div>
+    <div class="tarif">
+      <p class="price"><strong>22€</strong></p>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
+  </article>
+
+  <article class="choice-menu">
+    <div class="name-menu">
+      <h3 class="title-menu">Tarte au citron meringuée</h3>
+      <p class="small-title-menu">Destructurée</p>
+    </div>
+    <div class="tarif">
       <p class="price"><strong>23€</strong></p>
-        <i class="fa-check fas logo_check"></i>
-        </div>
-      </div>
+    </div>
+    <div class="check">
+      <i class="fa-check fas logo_check"></i>
+    </div>
   </article>
+</div>
+</div>
+
 
   <nav class="explore-restaurant" id="margin-commander">Commander</nav>
   
