--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -86,7 +86,7 @@
         <article class="choice-menu">
           <div class="name-menu">
             <h3 class="title-menu">Oeuf au plat</h3>
-            <p class="small-title-menu">Assaisoné à la truffe sur lit de...</p>
+            <p class="small-title-menu">Assaisoné à la truffe sur lit de caviar</p>
           </div>
           <div class="tarif">
             <p class="price"><strong>20€</strong></p>
@@ -105,7 +105,7 @@
         <article class="choice-menu">
           <div class="name-menu">
             <h3 class="title-menu">Filet de boeuf aux herbes</h3>
-            <p class="small-title-menu">Accompagné de sa ribambelle de légu...</p>
+            <p class="small-title-menu">Accompagné de sa ribambelle de légumes</p>
           </div>
           <div class="tarif">
             <p class="price"><strong>40€</strong></p>
