--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!--Deuxiéme section-->
     <section id="second-section">
-      <h2 class="title-h1">Fonctionnement</h2>
+      <h2 id="h1-margin" class="title-h1">Fonctionnement</h2>
       <nav id="choice">
         <div class="flex-choice">
           <a href="#" class="a-second-section">
