--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <ul class="flex-info">
       <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
       <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-      <li><a href="#">Mentions légales</a></li>
+      <li class="margin-mention"><a href="#">Mentions légales</a></li>
       <li><a href="mailto:service-client@gmail.com">Contact</a></li>
     </ul>
     </div>
