title-place-change

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
      
       <div class="restaurants">
         <!--La palette du gout-->
+        <h2 class="title-restaurant">Restaurants</h2>
         <div class="backround-card">
           <a href="restaurants/La-palette-du-gout.html" class="a-third-section">
             <div class="pictures-and-new">
